[package]
name = "mclj"
version = "0.1.0"
authors = ["Daniel Bauer <daniel.bauer@headlezz.net>"]

[dependencies]
rand = "0.3.15"
argparse = "*"

[profile.release]
lto = true
opt-level = 3

[[bin]]
name = "mc"
path = "src/main.rs"

[[bin]]
name = "widom"
path = "src/widom.rs"

[[bin]]
name = "surface_tension"
path = "src/surface_tension.rs"

[[bin]]
name = "density_z"
path = "src/density_z.rs"

